@@ -1782,8 +1782,9 @@ void Mob::AI_Event_Engaged(Mob* attacker, bool iYellForHelp) {
 				if(!CastToNPC()->GetCombatEvent() && GetHP() > 0)
 				{
                     parse->EventNPC(EVENT_COMBAT, CastToNPC(), attacker, "1", 0);
-					if(CastToNPC()->GetNPCEmoteID() != 0)
-						CastToNPC()->DoNPCEmote(ENTERCOMBAT);
+					int16 emoteid = CastToNPC()->GetNPCEmoteID();
+					if(emoteid != 0)
+						CastToNPC()->DoNPCEmote(ENTERCOMBAT,emoteid);
 					CastToNPC()->SetCombatEvent(true);
 				}
 			}
@@ -1814,9 +1815,10 @@ void Mob::AI_Event_NoLongerEngaged() {
 	{
 		if(CastToNPC()->GetCombatEvent() && GetHP() > 0)
 		{
+			int16 emoteid = CastToNPC()->GetNPCEmoteID();
             parse->EventNPC(EVENT_COMBAT, CastToNPC(), NULL, "0", 0);
-			if(CastToNPC()->GetNPCEmoteID() != 0)
-				CastToNPC()->DoNPCEmote(LEAVECOMBAT);
+			if(emoteid != 0)
+				CastToNPC()->DoNPCEmote(LEAVECOMBAT,emoteid);
 			CastToNPC()->SetCombatEvent(false);
 		}
 	}
