@@ -5,6 +5,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 
 Kayen: Fixed issue causing npc special attacks (kick/bash ect) to do extra damage.
 Kayen: Fixed major crash bug with rev2159.
+cavedude: AFTERDEATH npc_emote will now use emoteid instead of npcid.
 
 ==07/08/2012==
 
